welcome.lessons.welcome.array.search.Extrema.scala.error
extrema:5: error: '(' expected but identifier found.
    if maximum<nums(i){
       ^extrema:11: error: ';' expected but 'return' found.
  }return (maximum-minimum)
   ^